--- a/src/test.css
+++ b/src/test.css
@@ -19,6 +19,7 @@ body {
     font-size: 20px;
     border: none;
     margin: 5px;
+    padding: 5px;
     border-radius: 10px;
     cursor: pointer;
     transform: rotate(-360deg);
@@ -36,14 +37,12 @@ body {
 
 .main {
     display: grid;
-    grid-template-columns: auto, auto, auto, auto;
-    grid-template-rows: auto, auto, auto;
     background-color: rgb(13, 9, 245);
     padding: 20px;
     border-radius: 20px;
 }
 
-.para {
+.main > .para, .main > .form {
     grid-column-start: 1;
     grid-column-end: 3;
     background-color: rgb(191, 246, 246);
@@ -52,10 +51,42 @@ body {
     margin: 10px;
 }
 
+.main > .form {
+    display: grid;
+    grid-template-columns: 28% 28% 28% 16%;
+}
+
+.form-input-text {
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a:focus, button:focus, input:focus, textarea:focus {
+    outline: none;
+}
+
 .main > .btn {
     max-height: 40px;
     grid-column-start: 4;
     grid-column-end: 4;
     position: relative;
-    top: 40%;
+    top: 40%
+}
+
+.form-collumn-1 {
+    grid-column-start: 1;
+}
+
+.form-collumn-2 {
+    grid-column-start: 2;
+}
+
+.form-collumn-3 {
+    grid-column-start: 3;
+}
+
+.form-collumn-4 {
+    grid-column-start: 4;
+    display: flex;
+    align-items: center;
 }
