--- a/src/test.css
+++ b/src/test.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: rgb(191, 246, 246);
+    background-color: rgb(191, 196, 246);
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(37, 0, 0);
 }
@@ -23,7 +23,7 @@ body {
 .btn {
     height: 40px;
     display: inline-block;
-    color: silver;
+    color: rgb(211, 209, 209);
     font-size: 20px;
     border: 0.5px solid silver;
     margin: 5px;
@@ -49,7 +49,7 @@ body {
 .main > .para, .main > .form {
     grid-column-start: 1;
     grid-column-end: 3;
-    background-color: rgb(191, 246, 246);
+    background-color: rgb(191, 196, 246);
     padding: 10px;
     border-radius: 20px;
     margin: 10px;
