--- a/src/test.css
+++ b/src/test.css
@@ -30,6 +30,7 @@ body {
     font-size: 2rem;
     border-radius: 20px;
 }
+/* Shapes */
 
 .moon-right {
     padding: 75px;
@@ -45,6 +46,88 @@ body {
     margin-right: 50px;
 }
 
+.star-left {
+    background: var(--clr-primary-100);
+    height: 60px;
+    width: 60px;
+    position: relative;
+    left: -100px;
+    transform: rotate(10deg);
+    }
+
+.star-left:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 60px;
+    width: 60px;
+    background: var(--clr-primary-100);
+    transform: rotate(135deg);
+}
+
+#star-inner-left {
+    background: var(--clr-secondary-200);
+    height: 47.5px;
+    width: 47.5px;
+    position: relative;
+    left: 6px;
+    top: 6px;
+    transform: rotate(67.5deg);
+    }
+
+#star-inner-left:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 47.5px;
+    width: 47.5px;
+    background: var(--clr-secondary-200);
+    transform: rotate(135deg);
+}
+
+.star-right {
+    background: var(--clr-primary-100);
+    height: 60px;
+    width: 60px;
+    position: relative;
+    left: 100px;
+    transform: rotate(10deg);
+    }
+
+.star-right:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 60px;
+    width: 60px;
+    background: var(--clr-primary-100);
+    transform: rotate(135deg);
+}
+
+#star-inner-right {
+    background: var(--clr-secondary-200);
+    height: 47.5px;
+    width: 47.5px;
+    position: relative;
+    left: 6px;
+    top: 6px;
+    transform: rotate(67.5deg);
+    }
+
+#star-inner-right:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 47.5px;
+    width: 47.5px;
+    background: var(--clr-secondary-200);
+    transform: rotate(135deg);
+}
+/*End of shapes*/
 .btn {
     height: 40px;
     display: inline-block;
